tests/errors/undefined_fun.HC
//ERR: undefined function 'Nope'
Nope(1,2);
